Atualização dos termos
em 21/02/2018

--- a/paginas/termo.html
+++ b/paginas/termo.html
@@ -120,13 +120,11 @@
 	CEP: __.___-___.</p>
 <p>As partes acima qualificadas firmam o presente aditivo, na for ma abaixo, ao Contrato de Prestação de Serviços de Pedreiro, em face da Adesão&nbsp; contratação de mão de obra&nbsp; oferecido&nbsp;&nbsp; pela PRESTADORA ,&nbsp;&nbsp; com&nbsp;&nbsp; condições específicas&nbsp;&nbsp; que serão estabelecidas por meio do presente Instrumento e que irá aderir ao Contrato de Prestação de Serviços de Pedreiro.</p>
 <p>CLÁUSULA PRIMEIRA:<br />
-	1.1<br />
-	A PRESTADORA.<br />
+	1.1 A PRESTADORA.<br />
 	irá oferecer, mão de obra de serviços de pedreiro, e se compromete<br />
 	a executar os serviços sob orientação do contratante, podendo também a ser orientado por Engenheiro,<br />
 	Arquiteto, ou outro profissional habilitado.&nbsp;</p>
-<p>1.2<br />
-	RESPONSABILIDADE DA PRESTADORA<br />
+<p>1.2 RESPONSABILIDADE DA PRESTADORA<br />
 	-Oferecer mão de obra de qualidade, para execução dos serviços, manter e organizar a obra,<br />
 	-Contratar e manter seus funcionário inclusive recolhendo os impostos aplicados a categoria.&nbsp;&nbsp;<br />
 	-Não fornece informações a terceiro de projeto ou localização do imoveis.<br />
@@ -137,15 +135,33 @@
 	-Fornece uma planilha com todos os serviços a ser executado.<br />
 	-Sera responsabilizado pelos prejuízo gerado por imperícia, ou inexperiência.</p>
 <p>CLÁUSULA SEGUNDA:<br />
-	2.1<br />
-	CONTRATANTE.</p>
+	2.1 CONTRATANTE.</p>
 <p>O contratante se compromete fornecer condições gerais para a execução dos serviços proposto<br />
 	tais como água potável, energia elétrica, seus respectivos materiais, local seguro para a guarda dos materiais.<br />
-	Fazer os pagamento combinados na data acertada por escrito.<br />
-	Fiscalizar os serviço executados quanto a qualidade de tais.</p>
+	Fazer os pagamento combinados na data acertada por escrito.<br />	
+	Fiscalizar os serviço executados quanto a qualidade de tais.	
+	    </p>    
+	    
 <p>&nbsp;</p>
-<p><br />
+   CLÁUSULA TERCEIRA:<br />
+3.1  RESCISÃO DE CONTRATO, DEVERES<br />
+Este contrato pode ser rescindido sem prejuízos para as partes.<br />
+	O CONTRATANTE:<br />
+	-Com aviso antecipado da rescisão de 5 dias.<br />
+	-Com acerto dos respectivos trabalhos já realizados(contratado  na planilha).  <br />
+	-Em caso de inexperiência do profissional.<br />
+	-Roubo, Violência, Desvio de conduta.<br />
+	-Erro acima de 10% <br />
+A PRESTADORA:<br />
+	-Em caso de falta de pagamento.<br />
+	-Local inadequado para realização dos serviços.<br />
+	-Falta constante de material para construção.<br />
+<p>
 	DISPOSIÇÃO GERAL.<br />
+	Em caso de rescisão de contrato os devidos acordos serão pagos em no máximo de 10 dias uteis <br />para ambos os lados exceto quando houver acordo por escrito.<br />
+   	O atraso superior a 15 dias de serviço acarreta em multa de 0,5 por cento ao dia de atraso <br />limitada a 10% do total do orçamento.<br />
+   	Fica automaticamente alterado a data de entrega de serviço quando houver alteração de item da <br />planilha orçamentaria, proporcionalmente a valor do primeiro orçamento.
+
 	[ ] Existe uma planilha complementar com a descrição dos serviços proposto.</p>
 <p>Ou descreva o tipo de serviço abaixo.</p>
 <p>________________________________________________________________________________________</p>
