--- a/paginas/termo.html
+++ b/paginas/termo.html
@@ -160,7 +160,7 @@ A PRESTADORA:<br />
 	DISPOSIÇÃO GERAL.<br />
 	Em caso de rescisão de contrato os devidos acordos serão pagos em no máximo de 10 dias uteis <br />para ambos os lados exceto quando houver acordo por escrito.<br />
    	O atraso superior a 15 dias de serviço acarreta em multa de 0,5 por cento ao dia de atraso <br />limitada a 10% do total do orçamento.<br />
-   	Fica automaticamente alterado a data de entrega de serviço quando houver alteração de item da <br />planilha orçamentaria, proporcionalmente a valor do primeiro orçamento.
+   	Fica automaticamente alterado a data de entrega de serviço quando houver alteração de item da <br />planilha orçamentaria, proporcionalmente a valor do primeiro orçamento.<br />
 
 	[ ] Existe uma planilha complementar com a descrição dos serviços proposto.</p>
 <p>Ou descreva o tipo de serviço abaixo.</p>
