--- a/galeria/index.html
+++ b/galeria/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<META http-equiv="refresh" content="0;URL=www.avanildo.usa.cc"> 
+<meta http-equiv="refresh" content="0;URL=http://avanildo.usa.cc"> 
 <title>Redirecionar</title>
 <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 
-<meta >
 </head>
 <body>
 
