Atualizacão em sexta-02/03/2018-22:48

--- a/galeria/index.html
+++ b/galeria/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0;URL=http://avanildo.usa.cc"> 
+<meta http-equiv="refresh" content="0;URL=../index.html"> 
 <title>Redirecionar</title>
 <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 
