Atualizacão em quarta-07/03/2018-10:59

--- a/paginas/termo.html
+++ b/paginas/termo.html
@@ -151,7 +151,7 @@ Este contrato pode ser rescindido sem prejuízos para as partes.<br />
 	-Com acerto dos respectivos trabalhos já realizados(contratado  na planilha).  <br />
 	-Em caso de inexperiência do profissional.<br />
 	-Roubo, Violência, Desvio de conduta.<br />
-	-Erro acima de 10% <br />
+	-Erros sussecivos sem refazer   <br />
 A PRESTADORA:<br />
 	-Em caso de falta de pagamento.<br />
 	-Local inadequado para realização dos serviços.<br />
