Atualizacão em quarta-07/03/2018-12:55

--- a/paginas/termo.html
+++ b/paginas/termo.html
@@ -115,16 +115,17 @@
      
     <div class="col-sm-12 text-left">  
  <p>&nbsp;CONTRATO DE PRESTAÇÃO DE SERVIÇOS DE PEDREIRO</p>
-<p>Pelo presente instrumento, de um lado a doravante denominada PRESTADORA,a&nbsp; empresa Avanildo Pereira Macedo 467056275-49 ,sobre o nome fantasia Avanildo Construções MEI, com sede à Rua Antonio Koch Leme Filho N60 Kobaite, Cidade de Piracicaba,<br />
-	Estado de São Paulo, inscrita no CNPJ sob o nº 22.040.066/0001-48,&nbsp; número de telefone (19) 4102-4267 ,e por outro&nbsp;&nbsp; lado,&nbsp; o(a) Contratante _______________________________________,&nbsp; brasileiro(a),&nbsp;&nbsp; estado civil&nbsp;&nbsp; _____________,&nbsp;&nbsp; portador(a)&nbsp;&nbsp; da&nbsp;&nbsp; Carteira&nbsp;&nbsp; de&nbsp;&nbsp; Identidade&nbsp;&nbsp; nº&nbsp;&nbsp; ______________________,, inscrita no CPF/MF sob o nº ___.___.___-__, residente e domiciliado(a) à Rua____________________________________________________,&nbsp;&nbsp; Nº&nbsp;&nbsp; ____,&nbsp;&nbsp; Bairro&nbsp;&nbsp; _____________,&nbsp;&nbsp; Cidade&nbsp;&nbsp; de_____________, Estado de _______________,<br />
+<p>Pelo presente instrumento, de um lado a doravante denominada PRESTADORA,a&nbsp; empresa Avanildo Pereira Macedo 467056275-49 ,sob o nome fantasia AVANILDO CONSTRUÇÕES ME, com sede à Rua Antonio Koch Leme Filho N60 Kobaite, Cidade de Piracicaba,<br />
+	Estado de São Paulo, inscrita no CNPJ sob o nº 22.040.066/0001-48,&nbsp; número de telefone (19) 4102-4267 ,e por outro&nbsp;&nbsp; lado,&nbsp; o(a) CONTRATANTE _______________________________________,&nbsp; brasileiro(a),&nbsp;&nbsp; estado civil&nbsp;&nbsp; _____________,&nbsp;&nbsp; portador(a)&nbsp;&nbsp; da&nbsp;&nbsp; Carteira&nbsp;&nbsp; de&nbsp;&nbsp; Identidade&nbsp;&nbsp; nº&nbsp;&nbsp; ______________________,, inscrita no CPF/MF sob o nº ___.___.___-__, residente e domiciliado(a) à Rua____________________________________________________,&nbsp;&nbsp; Nº&nbsp;&nbsp; ____,&nbsp;&nbsp; Bairro&nbsp;&nbsp; _____________,&nbsp;&nbsp; Cidade&nbsp;&nbsp; de_____________, Estado de _______________,<br />
 	CEP: __.___-___.</p>
-<p>As partes acima qualificadas firmam o presente aditivo, na for ma abaixo, ao Contrato de Prestação de Serviços de Pedreiro, em face da Adesão&nbsp; contratação de mão de obra&nbsp; oferecido&nbsp;&nbsp; pela PRESTADORA ,&nbsp;&nbsp; com&nbsp;&nbsp; condições específicas&nbsp;&nbsp; que serão estabelecidas por meio do presente Instrumento e que irá aderir ao Contrato de Prestação de Serviços de Pedreiro.</p>
+<p>As partes acima qualificadas firmam o presente aditivo, na forma abaixo, ao Contrato de Prestação de Serviços de Pedreiro, em face da Adesão&nbsp; contratação de mão de obra&nbsp; oferecido&nbsp;&nbsp; pela PRESTADORA ,&nbsp;&nbsp; com&nbsp;&nbsp; condições específicas&nbsp;&nbsp; que serão estabelecidas por meio do presente Instrumento e que irá aderir ao Contrato de Prestação de Serviços de Pedreiro.</p>
 <p>CLÁUSULA PRIMEIRA:<br />
 	1.1 A PRESTADORA.<br />
 	irá oferecer, mão de obra de serviços de pedreiro, e se compromete<br />
 	a executar os serviços sob orientação do contratante, podendo também a ser orientado por Engenheiro,<br />
 	Arquiteto, ou outro profissional habilitado.&nbsp;</p>
-<p>1.2 RESPONSABILIDADE DA PRESTADORA<br />
+1.2 RESPONSABILIDADE DA PRESTADORA<br />
+<p style="padding-left:30px" >
 	-Oferecer mão de obra de qualidade, para execução dos serviços, manter e organizar a obra,<br />
 	-Contratar e manter seus funcionário inclusive recolhendo os impostos aplicados a categoria.&nbsp;&nbsp;<br />
 	-Não fornece informações a terceiro de projeto ou localização do imoveis.<br />
@@ -133,7 +134,8 @@
 	-Evitar desperdício de material.<br />
 	-Fazer o pedidos dos material com antecedência mínima de 24 horas.<br />
 	-Fornece uma planilha com todos os serviços a ser executado.<br />
-	-Sera responsabilizado pelos prejuízo gerado por imperícia, ou inexperiência.</p>
+	-Sera responsabilizado pelos prejuízo gerado por imperícia, ou inexperiência.
+</p>
 <p>CLÁUSULA SEGUNDA:<br />
 	2.1 CONTRATANTE.</p>
 <p>O contratante se compromete fornecer condições gerais para a execução dos serviços proposto<br />
@@ -147,15 +149,19 @@
 3.1  RESCISÃO DE CONTRATO, DEVERES<br />
 Este contrato pode ser rescindido sem prejuízos para as partes.<br />
 	O CONTRATANTE:<br />
+<p style="padding-left:30px">
 	-Com aviso antecipado da rescisão de 5 dias.<br />
 	-Com acerto dos respectivos trabalhos já realizados(contratado  na planilha).  <br />
 	-Em caso de inexperiência do profissional.<br />
 	-Roubo, Violência, Desvio de conduta.<br />
-	-Erros sussecivos sem refazer   <br />
+	-Erros sucessivos sem refazer   <br />
+</p>
 A PRESTADORA:<br />
+    <p style="padding-left:30px">
 	-Em caso de falta de pagamento.<br />
 	-Local inadequado para realização dos serviços.<br />
 	-Falta constante de material para construção.<br />
+    </p>
 <p>
 	DISPOSIÇÃO GERAL.<br />
 	Em caso de rescisão de contrato os devidos acordos serão pagos em no máximo de 10 dias uteis <br />para ambos os lados exceto quando houver acordo por escrito.<br />
